[package]
name = "jp_conversation"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_id = { workspace = true }
jp_mcp = { workspace = true }

quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde-human-readable"] }

[lints]
workspace = true
