[package]
name = "jp_conversation"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_config = { workspace = true }
jp_id = { workspace = true }

quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde-human-readable"] }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"] }

[lints]
workspace = true
