[package]
name = "jp_conversation"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_attachment = { workspace = true }
jp_config = { workspace = true }
jp_id = { workspace = true }
base64 = { workspace = true, features = ["std"] }
chrono = { workspace = true }
indexmap = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
insta = { workspace = true, features = ["json"] }
test-log = { workspace = true }

[lints]
workspace = true
