[package]
name = "jp_editor"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
camino = { workspace = true }
open-editor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

[lints]
workspace = true

[lib]
test = false
doctest = false
