[package]
name = "jp_editor"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
camino = { workspace = true }
camino-tempfile = { workspace = true }
duct = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[lints]
workspace = true

[lib]
test = false
doctest = false
