[package]
name = "jp_format"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_conversation = { workspace = true }

comfy-table = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true }
timeago = { workspace = true }

[lints]
workspace = true
