[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "jp_inquire"
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossterm = { workspace = true }
inquire = { workspace = true, features = ["crossterm"] }

[lints]
workspace = true
