[package]
name = "jp_llm"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_config = { workspace = true }
jp_conversation = { workspace = true }
jp_mcp = { workspace = true }
jp_model = { workspace = true }
jp_openrouter = { workspace = true }
jp_query = { workspace = true }

async-anthropic = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
gemini_client_rs = { workspace = true }
ollama-rs = { workspace = true, features = ["rustls", "stream"] }
openai = { workspace = true, features = ["rustls", "reqwest"] }
openai_responses = { workspace = true, features = ["stream"] }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
jp_test = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[lints]
workspace = true
