[package]
name = "jp_llm"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_config = { workspace = true }
jp_conversation = { workspace = true }
jp_inquire = { workspace = true }
jp_mcp = { workspace = true }
jp_openrouter = { workspace = true }
jp_tool = { workspace = true }

async-anthropic = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
crossterm = { workspace = true }
duct = { workspace = true }
duct_sh = { workspace = true }
futures = { workspace = true }
gemini_client_rs = { workspace = true }
indexmap = { workspace = true }
jsonschema = { workspace = true }
minijinja = { workspace = true, features = [
    "builtins",
    "json",
    "preserve_order",
    "serde",
    "unicode",
] }
ollama-rs = { workspace = true, features = ["rustls", "stream"] }
open-editor = { workspace = true }
openai = { workspace = true, features = ["rustls", "reqwest"] }
openai_responses = { workspace = true, features = ["stream"] }
quick-xml = { workspace = true, features = ["serialize"] }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
jp_test = { workspace = true }
paste = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
