[package]
name = "jp_mcp"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
minijinja = { workspace = true, features = ["serde", "json", "builtins"] }
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
