[package]
name = "jp_mcp"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_config = { workspace = true }

hex = { workspace = true }
indexmap = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[lints]
workspace = true
