[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "jp_model"
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_id = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
