[package]
name = "jp_openrouter"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-stream = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
reqwest = { workspace = true, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",
    "stream",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "serde",
    "serde-human-readable",
    "serde-well-known",
    "std",
] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true, features = ["record", "proxy"] }

[lints]
workspace = true
