[package]
name = "jp_openrouter"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-stream = { workspace = true }
backon = { workspace = true, features = ["tokio", "tokio-sleep"] }
futures = { workspace = true }
reqwest = { workspace = true, features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",
    "stream",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
jp_test = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
