[package]
name = "jp_printer"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bat = { workspace = true, features = ["regex-onig"] }
crossterm = { workspace = true }
markdown-table-formatter = "0.3"
parking_lot = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true, features = ["std"] }

[lints]
workspace = true
