[package]
name = "jp_query"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_config = { workspace = true }
jp_conversation = { workspace = true }
jp_mcp = { workspace = true }

schemars = { workspace = true, features = ["derive", "preserve_order", "std"] }
serde_json = { workspace = true, features = ["preserve_order"] }

[lints]
workspace = true
