[package]
name = "jp_serde"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
