[package]
name = "jp_storage"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_conversation = { workspace = true }
jp_id = { workspace = true }
jp_mcp = { workspace = true }
jp_tombmap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
