[package]
name = "jp_storage"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_config = { workspace = true }
jp_conversation = { workspace = true }

camino = { workspace = true, features = ["serde1"] }
chrono = { workspace = true }
rayon = { workspace = true }
relative-path = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order", "raw_value"] }
thiserror = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dev-dependencies]
camino-tempfile = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
