[package]
name = "jp_task"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
jp_config = { workspace = true }
jp_conversation = { workspace = true }
jp_llm = { workspace = true }
jp_model = { workspace = true }
jp_query = { workspace = true }
jp_workspace = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
